[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Bubble_Large.gd" type="Script" id=1]
[ext_resource path="res://physics_material/PhyisicsMaterial_Bubble.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://sprites/bubble_large_spritesheet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 51.0098

[sub_resource type="Animation" id=2]
resource_name = "Bouncing"
length = 0.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Bubble:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Exploding"
length = 0.12
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Bubble:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Bubble:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[node name="RigidBody2D_Bubble_Large" type="RigidBody2D"]
physics_material_override = ExtResource( 2 )
gravity_scale = 5.0
contacts_reported = 5
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 7.5

[node name="Sprite_Bubble" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 2
vframes = 2
frame = 1

[node name="AnimationPlayer_Bubble_Large" type="AnimationPlayer" parent="."]
anims/Bouncing = SubResource( 2 )
anims/Exploding = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_Bubble_body_entered"]
[connection signal="bubble_destroyed" from="." to="." method="_on_RigidBody2D_Bubble_Large_bubble_destroyed"]
